--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,8 +5,8 @@
 
 /* Extension popup dimensions */
 body {
-  width: 800px;
-  height: 600px;
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: system-ui, sans-serif;
   overflow-x: hidden;
